bootstrap/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-httproute
  namespace: argocd
spec:
  hostnames:
  - argocd.lab.mpopov.net
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: eg
    namespace: networking
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: argocd-server
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
